[package]
name = "cala_web"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

description = "A webserver library using cala."
license = "MIT/BSL-1.0"
documentation = "https://docs.rs/cala-web"
homepage = "https://libcala.github.io/cala-web"
repository = "https://github.com/libcala/cala-web"

[dependencies]
smelling_salts = "0.2"
pasts = "0.11"
num_cpus = "1.0"